# dataChecker

./: CMakeLists.txt
cmake/: SuperBuild.cmake  setup_compiler.cmake
src/: main.cpp
